Fixes missing horizontal alignment after refactor from flex to grid.

--- a/src/components/service_header/service_header.scss
+++ b/src/components/service_header/service_header.scss
@@ -5,6 +5,7 @@
 
 .osg-service-header {
   display: grid;
+  align-items: center;
   grid-template-columns: repeat(12, 1fr);
   column-gap: grid.$gutter-size-large;
   row-gap: grid.$gutter-size-large;
